[B]Version 2.2.1[/B]

- Fix version numbers
- Added authentification script for other addons (thanks to SchapplM)

[B]Version 2.2.0[/B]

- dropbox v2.2.0